<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/headerText"
            style="@style/HeaderText"
            android:text="@string/headerText" />

        <TextView
            android:id="@+id/question"
            style="@style/questionText"
            android:text="@string/question1" />

        <RadioGroup
            android:id="@+id/response_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer1"
                style="@style/answerText"
                android:text="@string/answer1_1" />

            <RadioButton
                android:id="@+id/answer2"
                style="@style/answerText"
                android:text="@string/answer2_1" />

            <RadioButton
                android:id="@+id/answer3"
                style="@style/answerText"
                android:text="@string/answer3_1" />

            <RadioButton
                android:id="@+id/answer4"
                style="@style/answerText"
                android:text="@string/answer4_1" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back"
                style="@style/button"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="goBack"
                android:text="@string/backButton"
                android:visibility="invisible" />

            <Button
                android:id="@+id/next"
                style="@style/button"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:onClick="goNext"
                android:text="@string/nextButton" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>